IDP-1464 Node Processor for mdui:UIInfo
https://issues.shibboleth.net/jira/browse/IDP-1464